# snowcat

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rollup.config.js
.cargo/: config.toml
src/: commands.rs  components.rs  lib.rs  modules.rs  state.rs  styles.rs  views.rs
src-common/: .gitignore  Cargo.toml  build.rs
src-common/mock/: antinov.json  dragon wolf.json  margaret rose.json  tigergriffin.json
src-common/src/: constants.rs  error.rs  helper.rs  lib.rs  settings.rs  state.rs  theme.rs  user.rs
src-common/src/command/: account.rs
src-common/src/remote/: character.rs
src-common/src/state/: cache.rs  character.rs  settings.rs
src-macros/: Cargo.toml
src-macros/src/: discriminate.rs  lib.rs
src-signals/: Cargo.toml
src-signals/src/: lib.rs  signal.rs  signal_vec.rs
src-signals/src/signal_vec/: group_by_key.rs  merge.rs
src-signals/tests/: signal_vec_merge.rs
src-signals/tests/util/: mod.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: api.rs  client.rs  commands.rs  io.rs  lib.rs  main.rs  state.rs  util.rs
src-tauri/src/api/: channels.rs  characters.rs  error.rs  remote.rs  url_helpers.rs
src-tauri/src/api/remote/: commands.rs  constants.rs  data.rs
src-tauri/src/api/remote/commands/: client.rs  server.rs
src-tauri/src/api/remote/data/: bookmarks.rs  characters.rs  friends.rs  lists.rs  mock.rs  ticket.rs
src-tauri/src/api/remote/mock/: characters.rs
src-tauri/src/commands/: account.rs  settings.rs
src-tauri/src/state/: cache.rs  mock.rs  prelude.rs  tauri.rs
src-tauri/src/tauri/commands/: account.rs
src-tauri/src/util/: hex.rs  private.rs
src/modules/: tauri.rs  web.rs
src/modules/tauri/: event.rs  window.rs
src/state/: settings.rs
src/views/: client.rs  login.rs  overlays.rs  sidebars.rs
src/views/client/: channel.rs  console.rs  conversation.rs
src/views/overlays/: menus.rs  notifications.rs
src/views/sidebars/: navigation.rs
src/views/sidebars/navigation/: channels_list.rs  conversations_list.rs
