[package]
name = "snowcat_ui"
description = "The front-end GUI for Snowcat, written in Rust using the Dominator framework."
authors = ["Dragon Wolf"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Themayu/snowcat"
readme = "README.md"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
  "src-common",
  "src-macros",
  "src-signals",
  "src-tauri"
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
discard = "1.0"
dominator = "0.5"
futures = "0.3"
futures-signals = "0.3"
js-sys = "0.3"
lazy_static = "1.4"
levenshtein-diff = "0.2"
log = "0.4"
once_cell = "1.7"
pin-project = "1.0"
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

# [dependencies.snowcat_common]
# path = "./src-common"

[dependencies.snowcat_signals]
path = "./src-signals"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomRect",
  "DomRectReadOnly",
  "DomTokenList",
  "Element",
  "EventTarget",
  "EventListener",
  "HtmlAnchorElement",
  "HtmlButtonElement",
  "HtmlCollection",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Window"
]

[profile.dev]
opt-level = 0
debug = true
