[package]
name = "snowcat_common"
description = "Types shared across the Snowcat frontend and backend."
authors = ["Dragon Wolf"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Themayu/snowcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.serde_with]
version = "1.10"
features = ["chrono"]

[dependencies.snowcat_macros]
path = "../src-macros"
