[package]
name = "snowcat_macros"
description = "Procedural macros used in Snowcat."
authors = ["Dragon Wolf"]
license = "MIT OR Apache-2.0"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Themayu/snowcat"
readme = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = [
	"clone-impls",
	"full",
	"parsing",
	"printing",
	"proc-macro",
]

[lib]
proc-macro = true
