[package]
name = "snowcat_signals"
description = "Signal extensions for the Snowcat UI."
authors = ["Dragon Wolf"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Themayu/snowcat"
readme = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3"
log = "0.4.14"
pin-project = "1.0.8"

[dev-dependencies]
chrono = "0.4.19"
ctor = "0.1.22"
fake = "2.5.0"
futures = "0.3"
rand = "0.8.5"
once_cell = "1.13.0"
stderrlog = "0.5.3"
