[package]
name = "snowcat"
description = "An F-Chat client written in Rust and Tauri."
authors = ["Dragon Wolf"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Themayu/snowcat"
readme = false
default-run = "snowcat"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustversion = "1.0"
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
env_logger = "0.9.0"
log = "0.4.14"
log-derive = "0.4.1"
once_cell = "1.7.2"
serde_with = "1.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5.8"
tracing = "0.1.36"

[dependencies.const-str]
version = "0.4"
features = ["proc"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.snowcat_common]
path = "../src-common"

[dependencies.snowcat_macros]
path = "../src-macros"

[dependencies.tauri]
version = "1.0.0"
features = [
	"devtools",
	"window-close",
	"window-maximize",
	"window-minimize",
	"window-set-title",
	"window-start-dragging",
	"window-unmaximize",
]

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt"]

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-shadows = "0.1.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
